--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "git://github.com/wankdanker/node-object-mapper.git"
   },
+  "type": "module",
   "scripts": {
     "test": "node test/test.js"
   },
